<resources>
    <string name="app_name">Connectivity Wi-Fi</string>

    <string name="wifi_p2p">Wi-Fi P2P</string>
    <string name="wifi_suggestion">Wi-Fi Suggestion</string>
    <string name="wifi_scan">Wi-Fi Scan</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Wi-Fi State -->
    <string name="wifi_state">Wi-Fi State</string>
    <string name="connected_wifi">Connected Wi-Fi</string>
    <string name="is_p2p_supported">Is P2P Supported?</string>
    <string name="supported">Supported</string>
    <string name="not_supported">Not supported</string>
    <string name="enable_wifi">Enable Wi-Fi</string>
    <string name="allow_location">Allow Location</string>
    <string name="enable_location">Enable Location</string>
    <string name="features">Features</string>
    <string name="wifi_state_error_api_level_register_network_callback">Require API level 21 or above to listen to connection changes.</string>
    <string name="wifi_state_error_api_level_p2p_supported_status">Require API level 21 or above to check P2P support status.</string>
    <string name="wifi_state_error_permission_denied">Location permission is needed to listen to connection changes.</string>
    <string name="wifi_state_error_location_disabled">Location service must be enabled to listen to connection changes.</string>
    <string name="wifi_state_location_permission_rationale">Location permission needed to see connected Wi-Fi info.</string>
    <string name="wifi_state_disabled">Disabled</string>
    <string name="wifi_state_disabling">Disabling</string>
    <string name="wifi_state_enabled">Enabled</string>
    <string name="wifi_state_enabling">Enabling</string>
    <string name="wifi_state_unknown">Unknown</string>

    <!-- Wi-Fi Scan -->
    <string name="signal_strength">Signal strength:</string>
    <string name="frequency">Frequency:</string>
    <string name="connected">Connected</string>
    <string name="wifi_scan_signal_level_very_bad">Very Weak</string>
    <string name="wifi_scan_signal_level_bad">Weak</string>
    <string name="wifi_scan_signal_level_average">Good</string>
    <string name="wifi_scan_signal_level_good">Strong</string>
    <string name="wifi_scan_signal_level_very_good">Very Strong</string>
    <string name="wifi_scan_error_throttling">Try disabling Wi-Fi scanning throttling in developer options to scan Wi-Fi frequently.</string>
    <string name="wifi_scan_frequency">%1$s GHz</string>

    <!-- Wi-Fi Suggestion -->
    <string name="has_password">Has Password:</string>
    <string name="suggest">Suggest</string>
    <string name="remove">Remove</string>
    <string name="need_app_interaction">Need app interaction:</string>
    <string name="priority">Priority:</string>
    <string name="event">Event:</string>
    <string name="wifi_suggestion_error_api_level_register_broadcast_listener">Require API level 29 or above to listen to post connection Wi-Fi suggestions.</string>
    <string name="wifi_suggestion_listener_error_permission_denied">Location permission is needed to listen to post connection Wi-Fi suggestions.</string>
    <string name="wifi_suggestion_listener_error_location_disabled">Location service must be enabled to listen to post connection Wi-Fi suggestions.</string>
    <string name="wifi_suggestion_success_add">%1$s is suggested!</string>
    <string name="wifi_suggestion_success_remove">%1$s is removed!</string>
    <string name="wifi_suggestion_error_internal">Error: Internal error :(</string>
    <string name="wifi_suggestion_error_app_disallowed">Error: Please allow this app to control Wi-Fi</string>
    <string name="wifi_suggestion_error_add_duplicate">Error: This suggestion is duplicate</string>
    <string name="wifi_suggestion_error_add_exceeds_max_per_app">Error: Max suggestions is exceeded. Consider removing unused suggestions.</string>
    <string name="wifi_suggestion_error_remove_invalid">Error: This suggestion doesn\'t exist.</string>
    <string name="wifi_suggestion_error_permission_denied">Permission not granted</string>
    <string name="wifi_suggestion_error_api_level">Wi-Fi suggestion need API level 29 or above :(</string>
    <string name="wifi_suggestion_connected">A suggested Wi-Fi is connected!</string>

    <!-- Wi-Fi P2P -->
    <string name="receive_file">Receive File</string>
    <string name="send_file">Send File</string>
    <string name="disconnect">Disconnect</string>
    <string name="status">Status:</string>
    <string name="connect">Connect</string>
    <string name="cancel">Cancel</string>
    <string name="wifi_p2p_error_wifi_disabled">Wi-Fi service must be enabled to use P2P.</string>
    <string name="wifi_p2p_location_permission_rationale">Location permission needed to discover peers.</string>
    <string name="waiting_for_file">Waiting for file…</string>
    <string name="wifi_p2p_connect">Connect to %1$s?</string>
    <string name="wifi_p2p_disconnect">Disconnect from %1$s?</string>
    <string name="file_sent">File sent!</string>
    <string name="file_received">File received: %1$s</string>
    <string name="create_group">Create Group</string>
    <string name="create_group_error_api_level">Creating Wi-Fi P2P group need API level 29 or above :(</string>
</resources>