<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.hanmajid.android.reservoir.connectivity.wifi.WifiConstants" />

        <import type="com.hanmajid.android.reservoir.connectivity.wifi.util.WifiP2pUtil" />

        <variable
            name="isGroupOwner"
            type="Boolean" />

        <variable
            name="device"
            type="android.net.wifi.p2p.WifiP2pDevice" />

    </data>

    <com.google.android.material.card.MaterialCardView
        backgroundIf="@{device.status == WifiConstants.WIFI_P2P_DEVICE_STATUS_CONNECTED}"
        backgroundIfColor="@{@color/colorSuccessLight}"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="16dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toTopOf="@id/guideline_top">

                <TextView
                    android:id="@+id/ssid"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{device.deviceName}"
                    tools:text="Device Name" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Subtitle2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:text="@string/status" />

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Body2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{WifiP2pUtil.getWifiP2PDeviceStatusDescription(device.status)}"
                        tools:text="Available" />

                </LinearLayout>

                <LinearLayout
                    hidden="@{device.status == WifiConstants.WIFI_P2P_DEVICE_STATUS_CONNECTED}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/button_connect"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/connect" />

                    <Button
                        android:id="@+id/button_create_group"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_group" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/button_disconnect"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        hidden="@{device.status != WifiConstants.WIFI_P2P_DEVICE_STATUS_CONNECTED}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/disconnect" />

                    <Button
                        android:id="@+id/button_send"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        hidden="@{device.status != WifiConstants.WIFI_P2P_DEVICE_STATUS_CONNECTED || isGroupOwner}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/send_file" />

                    <Button
                        android:id="@+id/button_receive"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        hidden="@{device.status != WifiConstants.WIFI_P2P_DEVICE_STATUS_CONNECTED || !isGroupOwner}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/receive_file" />

                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>