<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.suggestion.WifiSuggestionFragment">

    <data>

        <variable
            name="isConnected"
            type="Boolean" />

        <variable
            name="errorMessage"
            type="String" />

        <variable
            name="isPermissionGranted"
            type="Boolean" />

        <variable
            name="isLocationEnabled"
            type="Boolean" />

    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/header"
                backgroundIf="@{isConnected}"
                backgroundIfColor="@{@color/colorSuccessLight}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Subtitle2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:layout_marginRight="4dp"
                        android:text="@string/event" />

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Body2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{isConnected ? @string/wifi_suggestion_connected : `-`}"
                        tools:text="@string/wifi_suggestion_connected" />

                </LinearLayout>

                <LinearLayout
                    hidden="@{isPermissionGranted &amp;&amp; isLocationEnabled}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:gravity="center_horizontal"
                        android:text="@{errorMessage}"
                        android:textAlignment="center"
                        tools:text="Error:" />

                    <Button
                        android:id="@+id/button_permission_settings"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        hidden="@{isPermissionGranted}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/allow_location" />

                    <Button
                        android:id="@+id/button_location_settings"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        hidden="@{isLocationEnabled}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/enable_location" />

                </LinearLayout>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                dividerItemDecorationVertical="@{true}"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header"
                tools:itemCount="2"
                tools:listitem="@layout/item_wifi_suggestion" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</layout>